feat(backend): implement COMP-002 PostService reply batch fetching and creation logic
Introduce reply DTOs, domain exceptions, and business logic to support thread replies:
- Define CreateReplyRequest with Bean Validation constraints on name and message
- Define ReplyResponse and enhance PostResponse with guaranteed non-null empty [] replies
- Implement batch reply retrieval in PostService.getPagedPosts using ReplyRepository.findByPostIdInOrderByCreatedAtAsc
- Implement PostService.createReply with parent post verification via PostRepository.findById and PostNotFoundException handling
- Add comprehensive unit tests covering preconditions, postconditions, and edge cases

Co-Authored-By: "Antigravity Gemini 3.8 Flash (High)" <gemini@google.com>